--- a/map1.html
+++ b/map1.html
@@ -1,120 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Carte interactive codes postaux France</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <style>
-    html, body { margin:0; padding:0; height:100%; font-family: Arial, sans-serif; overflow:hidden; }
-    body { display:flex; height:100vh; user-select:none; }
-    #sidebar-left, #sidebar-right {
-      background:#000; color:white; overflow-y:auto; padding:10px;
-      box-shadow:2px 0 5px rgba(0,0,0,0.3); font-size:14px;
-      min-width:180px; max-width:400px; resize:horizontal; overflow:auto;
-    }
-    #sidebar-left { border-right:1px solid #444; width:250px; }
-    #sidebar-right { border-left:1px solid #444; width:250px; }
-    #map { flex-grow:1; height:100vh; }
-    label { display:block; margin-bottom:6px; cursor:pointer; user-select:text; color:white; }
-    #controls { padding:10px; background:#111; position:sticky; top:0; z-index:1000; border-bottom:1px solid #444; margin-bottom:10px; color:white; }
-    .custom-tooltip { font-weight:bold; }
-    .selectall-label { font-weight:bold; margin-top:6px; border-bottom:1px solid #444; padding-bottom:2px; cursor:pointer; }
-    .toggle-btn {
-      font-size:14px; background:#6a0dad; border:none; color:white;
-      padding:4px 10px; border-radius:4px; cursor:pointer;
-      margin:10px 0 6px 0; width:100%; text-align:left;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-    .toggle-btn:hover { background:#7d26cd; transform: scale(1.02); }
-    #toggleLeftBtn, #toggleRightBtn {
-      position:fixed; top:10px; padding:8px 14px; font-size:14px; border-radius:4px;
-      cursor:pointer; z-index:1300; box-shadow:0 2px 8px rgba(106,13,173,0.7);
-      color:white; background-color:#6a0dad; transition:background-color 0.3s ease;
-    }
-    #toggleLeftBtn { left:10px; } #toggleRightBtn { right:10px; }
-    .hidden { display:none !important; }
-
-    /* Animation chargement */
-    #loadingOverlay {
-      position:fixed; top:0; left:0; width:100%; height:100%;
-      background:rgba(0,0,0,0.7); display:flex; justify-content:center; align-items:center;
-      z-index:2000; color:white; font-size:20px; font-weight:bold;
-      flex-direction:column;
-    }
-    .spinner {
-      border:6px solid #ccc; border-top:6px solid #6a0dad;
-      border-radius:50%; width:50px; height:50px;
-      animation:spin 1s linear infinite; margin-bottom:10px;
-    }
-    @keyframes spin { 100% { transform: rotate(360deg); } }
-  </style>
-</head>
-<body>
-
-<div id="loadingOverlay" class="hidden">
-  <div class="spinner"></div>
-  Chargement...
-</div>
-
-<button id="toggleLeftBtn" title="Afficher/Masquer Réseau">Réseau</button>
-<button id="toggleRightBtn" title="Afficher/Masquer Département">Département</button>
-
-<div id="sidebar-left">
-  <div id="controls">
-    <input type="file" id="uploadExcel" accept=".xlsx" />
-  </div>
-
-  <button class="toggle-btn" data-target="region">Région</button>
-  <div id="filter-region" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="region-select-all" checked> Tout Régions</label>
-    <div id="regionList"></div>
-  </div>
-
-  <button class="toggle-btn" data-target="agence">Agence</button>
-  <div id="filter-agence" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="agence-select-all" checked> Tout Agences</label>
-    <div id="agenceList"></div>
-  </div>
-
-  <button class="toggle-btn" data-target="antenne">Antenne</button>
-  <div id="filter-antenne" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="antenne-select-all" checked> Tout Antennes</label>
-    <div id="antenneList"></div>
-  </div>
-
-  <button class="toggle-btn" data-target="dsp">DSP</button>
-  <div id="filter-dsp" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="dsp-select-all" checked> Tout DSP</label>
-    <div id="dspList"></div>
-  </div>
-
-  <button class="toggle-btn" data-target="canaldis">Canal DIS</button>
-  <div id="filter-canaldis" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="canaldis-select-all" checked> Tout Canal DIS</label>
-    <div id="canaldisList"></div>
-  </div>
-</div>
-
-<div id="map"></div>
-
-<div id="sidebar-right">
-  <button class="toggle-btn" data-target="departement">Département</button>
-  <div id="filter-departement" class="hidden">
-    <label><input type="checkbox" id="contour-cp" checked> Contour CP</label>
-    <label class="selectall-label"><input type="checkbox" id="departement-select-all" checked> Tout Départements</label>
-    <div id="departementList"></div>
-  </div>
-
-  <button class="toggle-btn" data-target="texte2">Nom département</button>
-  <div id="filter-texte2" class="hidden">
-    <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> Tout Nom département</label>
-    <div id="texte2List"></div>
-  </div>
-</div>
-
 <script>
 var map = L.map('map',{minZoom:6,center:[46.6,2.4],zoom:6});
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18,attribution:'© OpenStreetMap contributors'}).addTo(map);
@@ -124,32 +7,20 @@ let distinctValues={region:new Map(), agence:new Map(), antenne:new Map(), dsp:n
 let filterState={region:new Map(), agence:new Map(), antenne:new Map(), dsp:new Map(), canaldis:new Map(), departement:new Map(), texte2:new Map()};
 let contourVisible=true;
 
-function getKeyIgnoreCase(obj,key){
-  key=key.toLowerCase().replace(/\s+/g,'');
-  for(const k in obj) if(k.toLowerCase().replace(/\s+/g,'')===key) return obj[k];
-  return null;
+function normalizeKey(key){
+  return key.toString().toLowerCase().replace(/\s+/g,'').replace(/[éèê]/g,'e').replace(/[àâ]/g,'a');
 }
 
-// ... ⚡ toutes les fonctions buildFilterList, updateSelectAllCheckbox, setupSelectAllListener, setupFilterToggleButtons, filterGeoLayer, syncFilters, updateDistinctValues, buildFilterLists identiques à la version précédente ...
+function normalizeObject(obj){
+  let n={};
+  for(const k in obj){ n[normalizeKey(k)] = obj[k]; }
+  return n;
+}
 
-document.getElementById('toggleLeftBtn').addEventListener('click',()=>{ 
-  const left=document.getElementById('sidebar-left'); 
-  left.style.display=(left.style.display==='none')?'block':'none'; 
-});
-document.getElementById('toggleRightBtn').addEventListener('click',()=>{ 
-  const right=document.getElementById('sidebar-right'); 
-  right.style.display=(right.style.display==='none')?'block':'none'; 
-});
-
-document.getElementById('contour-cp').addEventListener('change',function(){
-  contourVisible=this.checked;
-  if(geoLayer){
-    geoLayer.setStyle(f=>({
-      weight: contourVisible ? 1 : 0,
-      color: getKeyIgnoreCase(extraProperties[f.properties.code_postal]||{}, "Ligne_couleur")||"#000"
-    }));
-  }
-});
+// Fonction utilitaire
+function getKey(obj, key){
+  return obj[normalizeKey(key)] || null;
+}
 
 document.getElementById('uploadExcel').addEventListener('change',()=>{
   const file=document.getElementById('uploadExcel').files[0];
@@ -160,14 +31,29 @@ document.getElementById('uploadExcel').addEventListener('change',()=>{
     try {
       const data=new Uint8Array(e.target.result);
       const workbook=XLSX.read(data,{type:'array'});
-      const firstSheetName=workbook.SheetNames[0];
-      const sheet=workbook.Sheets[firstSheetName];
-      const jsonData=XLSX.utils.sheet_to_json(sheet);
+      const sheet=workbook.Sheets[workbook.SheetNames[0]];
+      let jsonData=XLSX.utils.sheet_to_json(sheet);
 
-      extraProperties={}; updateDistinctValues(jsonData);
-      jsonData.forEach(item=>{ const cp=(item["Code Postal"]||"").toString(); if(cp.length>0) extraProperties[cp]=item; });
-      Object.keys(distinctValues).forEach(f=>distinctValues[f].forEach((_,val)=>filterState[f].set(val,true)));
-      buildFilterLists(); map.setView([46.6,2.4],6);
+      // 🔥 Normaliser les clés
+      jsonData=jsonData.map(row=>normalizeObject(row));
+
+      extraProperties={}; 
+      Object.keys(distinctValues).forEach(k=>{ distinctValues[k].clear(); filterState[k].clear(); });
+
+      jsonData.forEach(item=>{
+        const cp=(item["codepostal"]||item["code_postal"]||"").toString();
+        if(cp){
+          extraProperties[cp]=item;
+          // remplir distinctValues
+          Object.keys(distinctValues).forEach(f=>{
+            const val=item[normalizeKey(f)];
+            if(val){ distinctValues[f].set(val,true); filterState[f].set(val,true); }
+          });
+        }
+      });
+
+      buildFilterLists(); 
+      map.setView([46.6,2.4],6);
 
       updateMapWithExtraProperties().finally(()=>{
         document.getElementById('loadingOverlay').classList.add('hidden');
@@ -190,18 +76,18 @@ function updateMapWithExtraProperties(){
       style:function(feature){
         const cp=feature.properties.code_postal||feature.properties.codePostal||feature.properties.code||"";
         const extras=extraProperties[cp]||{};
-        return { fillColor:getKeyIgnoreCase(extras,"Fond_couleur")||"#66cc66",
-                 color:getKeyIgnoreCase(extras,"Ligne_couleur")||"#000000",
+        return { fillColor:getKey(extras,"fondcouleur")||"#66cc66",
+                 color:getKey(extras,"lignecouleur")||"#000000",
                  weight: contourVisible?1:0, opacity:1, fillOpacity:0.7 };
       },
       onEachFeature:function(feature,layer){
         const cp=feature.properties.code_postal||feature.properties.codePostal||feature.properties.code||"";
         const extras=extraProperties[cp]||{};
-        let texteParts=[]; ["Texte1","Texte2","Texte3","Texte4"].forEach(fld=>{ const val=getKeyIgnoreCase(extras,fld); if(val) texteParts.push(val); });
+        let texteParts=[]; ["texte1","texte2","texte3","texte4"].forEach(fld=>{ const val=getKey(extras,fld); if(val) texteParts.push(val); });
         const tooltipText=texteParts.join(" ");
-        const policeCouleur=getKeyIgnoreCase(extras,"police couleur")||'#000000';
+        const policeCouleur=getKey(extras,"policecouleur")||'#000000';
         layer.bindTooltip(`<span style="color:${policeCouleur};">${tooltipText||("Code Postal : "+cp)}</span>`,{className:'custom-tooltip'});
-        const clicUrl=getKeyIgnoreCase(extras,"Clic URL");
+        const clicUrl=getKey(extras,"clicurl");
         if(clicUrl && clicUrl.trim().length>0){ layer.on("click",()=>window.open(clicUrl,'_blank')); layer.setStyle({ cursor:"pointer" }); }
       }
     }).addTo(map);
@@ -212,5 +98,3 @@ function updateMapWithExtraProperties(){
   });
 }
 </script>
-</body>
-</html>
