--- a/map1.html
+++ b/map1.html
@@ -1,3 +1,93 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Carte interactive codes postaux France</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+  <style>
+    html, body { margin:0; padding:0; height:100%; font-family: Arial, sans-serif; overflow:hidden; }
+    body { display:flex; height:100vh; user-select:none; }
+    #sidebar-left, #sidebar-right {
+      background:#000; color:white; overflow-y:auto; padding:10px;
+      box-shadow:2px 0 5px rgba(0,0,0,0.3); font-size:14px;
+      min-width:180px; max-width:400px; resize:horizontal; overflow:auto;
+    }
+    #sidebar-left { border-right:1px solid #444; width:250px; }
+    #sidebar-right { border-left:1px solid #444; width:250px; }
+    #map { flex-grow:1; height:100vh; }
+    label { display:block; margin-bottom:6px; cursor:pointer; user-select:text; color:white; }
+    #controls { padding:10px; background:#111; position:sticky; top:0; z-index:1000; border-bottom:1px solid #444; margin-bottom:10px; color:white; }
+    .custom-tooltip { font-weight:bold; }
+    .selectall-label { font-weight:bold; margin-top:6px; border-bottom:1px solid #444; padding-bottom:2px; cursor:pointer; }
+    .toggle-btn { font-size:14px; background:#007bff; border:none; color:white; padding:4px 10px; border-radius:4px; cursor:pointer; margin:10px 0 6px 0; width:100%; text-align:left; }
+    #toggleLeftBtn, #toggleRightBtn { position:fixed; top:10px; padding:8px 14px; font-size:14px; border-radius:4px; cursor:pointer; z-index:1300; box-shadow:0 2px 8px rgba(0,191,255,0.7); color:white; background-color:#00bfff; transition:background-color 0.3s ease; }
+    #toggleLeftBtn.violet, #toggleRightBtn.violet { background-color:#6a0dad !important; box-shadow:0 2px 8px rgba(106,13,173,0.7) !important; }
+    #toggleLeftBtn { left:10px; } #toggleRightBtn { right:10px; }
+    .hidden { display:none !important; }
+  </style>
+</head>
+<body>
+
+<button id="toggleLeftBtn" title="Afficher/Masquer Réseau">Réseau</button>
+<button id="toggleRightBtn" title="Afficher/Masquer Département">Département</button>
+
+<div id="sidebar-left">
+  <div id="controls">
+    <input type="file" id="uploadExcel" accept=".xlsx" />
+    <button id="convertBtn">Conversion JSON et Affichage</button>
+  </div>
+
+  <button class="toggle-btn" data-target="region">Région</button>
+  <div id="filter-region" class="hidden">
+    <label class="selectall-label"><input type="checkbox" id="region-select-all" checked> Tout Régions</label>
+    <div id="regionList"></div>
+  </div>
+
+  <button class="toggle-btn" data-target="agence">Agence</button>
+  <div id="filter-agence" class="hidden">
+    <label class="selectall-label"><input type="checkbox" id="agence-select-all" checked> Tout Agences</label>
+    <div id="agenceList"></div>
+  </div>
+
+  <button class="toggle-btn" data-target="antenne">Antenne</button>
+  <div id="filter-antenne" class="hidden">
+    <label class="selectall-label"><input type="checkbox" id="antenne-select-all" checked> Tout Antennes</label>
+    <div id="antenneList"></div>
+  </div>
+
+  <button class="toggle-btn" data-target="dsp">DSP</button>
+  <div id="filter-dsp" class="hidden">
+    <label class="selectall-label"><input type="checkbox" id="dsp-select-all" checked> Tout DSP</label>
+    <div id="dspList"></div>
+  </div>
+
+  <button class="toggle-btn" data-target="canaldis">Canal DIS</button>
+  <div id="filter-canaldis" class="hidden">
+    <label class="selectall-label"><input type="checkbox" id="canaldis-select-all" checked> Tout Canal DIS</label>
+    <div id="canaldisList"></div>
+  </div>
+</div>
+
+<div id="map"></div>
+
+<div id="sidebar-right">
+  <button class="toggle-btn" data-target="departement">Département</button>
+  <div id="filter-departement" class="hidden">
+    <label><input type="checkbox" id="contourCP" checked> Contour CP</label>
+    <label class="selectall-label"><input type="checkbox" id="departement-select-all" checked> Tout Départements</label>
+    <div id="departementList"></div>
+  </div>
+
+  <button class="toggle-btn" data-target="texte2">Nom département</button>
+  <div id="filter-texte2" class="hidden">
+    <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> Tout Nom département</label>
+    <div id="texte2List"></div>
+  </div>
+</div>
+
 <script>
 var map = L.map('map',{minZoom:6,center:[46.6,2.4],zoom:6});
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18,attribution:'© OpenStreetMap contributors'}).addTo(map);
@@ -5,96 +95,163 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18,att
 let extraProperties={}, geoLayer;
 let distinctValues={region:new Map(), agence:new Map(), antenne:new Map(), dsp:new Map(), canaldis:new Map(), departement:new Map(), texte2:new Map()};
 let filterState={region:new Map(), agence:new Map(), antenne:new Map(), dsp:new Map(), canaldis:new Map(), departement:new Map(), texte2:new Map()};
-let contourVisible=true;
 
-function normalizeKey(key){
-  return key.toString().toLowerCase().replace(/\s+/g,'').replace(/[éèê]/g,'e').replace(/[àâ]/g,'a');
+function getKeyIgnoreCase(obj,key){ key=key.toLowerCase().replace(/\s+/g,''); for(const k in obj) if(k.toLowerCase().replace(/\s+/g,'')===key) return obj[k]; return null; }
+
+function buildFilterList(filterName, containerId){
+  const container=document.getElementById(containerId); container.innerHTML='';
+  const mapVals=distinctValues[filterName];
+  const items=Array.from(mapVals.keys());
+
+  const enabled=[], disabled=[];
+  items.forEach(val=>{
+    if(!filterState[filterName].has(val)) filterState[filterName].set(val,true);
+    const isEnabled=filterState[filterName].get(val)!==false;
+    if(isEnabled) enabled.push(val); else disabled.push(val);
+  });
+
+  const sortedEnabled=enabled.sort((a,b)=>a.localeCompare(b,'fr',{sensitivity:'base'}));
+  const sortedDisabled=disabled.sort((a,b)=>a.localeCompare(b,'fr',{sensitivity:'base'}));
+
+  [...sortedEnabled,...sortedDisabled].forEach(val=>{
+    const label=document.createElement('label');
+    const checkbox=document.createElement('input'); checkbox.type='checkbox';
+    checkbox.checked=filterState[filterName].get(val)!==false;
+    checkbox.disabled=sortedDisabled.includes(val);
+    checkbox.addEventListener('change',()=>{
+      filterState[filterName].set(val,checkbox.checked);
+      filterGeoLayer();
+      updateSelectAllCheckbox(filterName);
+    });
+    label.appendChild(checkbox); label.appendChild(document.createTextNode(' '+val));
+    container.appendChild(label);
+  });
 }
 
-function normalizeObject(obj){
-  let n={};
-  for(const k in obj){ n[normalizeKey(k)] = obj[k]; }
-  return n;
+function updateSelectAllCheckbox(filterName){
+  const selectAllCheckbox=document.getElementById(filterName+'-select-all'); if(!selectAllCheckbox) return;
+  const allValues=Array.from(distinctValues[filterName].keys());
+  const valuesChecked=allValues.map(val=>filterState[filterName].get(val)!==false);
+  selectAllCheckbox.checked=valuesChecked.length>0 && valuesChecked.every(v=>v===true);
+  selectAllCheckbox.indeterminate=valuesChecked.some(v=>v===true) && !selectAllCheckbox.checked;
 }
 
-// Fonction utilitaire
-function getKey(obj, key){
-  return obj[normalizeKey(key)] || null;
+function setupSelectAllListener(filterName){
+  const selectAllCheckbox=document.getElementById(filterName+'-select-all'); if(!selectAllCheckbox) return;
+  selectAllCheckbox.addEventListener('change',()=>{
+    const checked=selectAllCheckbox.checked;
+    const container=document.getElementById(filterName+'List'); if(!container) return;
+    Array.from(container.querySelectorAll('input[type="checkbox"]')).forEach(cb=>{
+      if(!cb.disabled){ 
+        cb.checked=checked; const val=cb.nextSibling.textContent.trim(); filterState[filterName].set(val,checked);
+      }
+    });
+    updateSelectAllCheckbox(filterName); filterGeoLayer();
+  });
 }
 
-document.getElementById('uploadExcel').addEventListener('change',()=>{
-  const file=document.getElementById('uploadExcel').files[0];
-  if(!file) return;
-  document.getElementById('loadingOverlay').classList.remove('hidden');
-  const reader=new FileReader();
-  reader.onload=e=>{
-    try {
-      const data=new Uint8Array(e.target.result);
-      const workbook=XLSX.read(data,{type:'array'});
-      const sheet=workbook.Sheets[workbook.SheetNames[0]];
-      let jsonData=XLSX.utils.sheet_to_json(sheet);
+function setupFilterToggleButtons(){
+  const buttons=document.querySelectorAll('.toggle-btn');
+  buttons.forEach(btn=>{
+    const targetId=btn.getAttribute('data-target');
+    btn.textContent=capitalizeFirstLetter(targetId);
+    btn.addEventListener('click',()=>{
+      const el=document.getElementById('filter-'+targetId);
+      if(!el) return;
+      if(el.classList.contains('hidden')){ el.classList.remove('hidden'); btn.textContent='Masquer '+capitalizeFirstLetter(targetId); }
+      else{ el.classList.add('hidden'); btn.textContent=capitalizeFirstLetter(targetId); }
+    });
+  });
+}
 
-      // 🔥 Normaliser les clés
-      jsonData=jsonData.map(row=>normalizeObject(row));
+function capitalizeFirstLetter(str){ return str.charAt(0).toUpperCase()+str.slice(1); }
+document.getElementById('toggleLeftBtn').addEventListener('click',()=>{ const left=document.getElementById('sidebar-left'); left.style.display=(left.style.display==='none')?'block':'none'; });
+document.getElementById('toggleRightBtn').addEventListener('click',()=>{ const right=document.getElementById('sidebar-right'); right.style.display=(right.style.display==='none')?'block':'none'; });
 
-      extraProperties={}; 
-      Object.keys(distinctValues).forEach(k=>{ distinctValues[k].clear(); filterState[k].clear(); });
+function filterGeoLayer(){
+  if(!geoLayer) return;
+  const contourChecked=document.getElementById('contourCP').checked;
+  const weightVal=contourChecked?1:0;
 
-      jsonData.forEach(item=>{
-        const cp=(item["codepostal"]||item["code_postal"]||"").toString();
-        if(cp){
-          extraProperties[cp]=item;
-          // remplir distinctValues
-          Object.keys(distinctValues).forEach(f=>{
-            const val=item[normalizeKey(f)];
-            if(val){ distinctValues[f].set(val,true); filterState[f].set(val,true); }
-          });
-        }
-      });
+  geoLayer.eachLayer(layer=>{
+    const cp=layer.feature.properties.code_postal||layer.feature.properties.codePostal||layer.feature.properties.code||"";
+    const extras=extraProperties[cp]||{};
+    const valRegion=getKeyIgnoreCase(extras,"région")||"";
+    const valAgence=getKeyIgnoreCase(extras,"Agence")||"";
+    const valAntenne=getKeyIgnoreCase(extras,"Antenne")||"";
+    const valDSP=getKeyIgnoreCase(extras,"DSP")||"";
+    const valCanalDIS=getKeyIgnoreCase(extras,"Canal DIS")||"";
+    const valDepartement=getKeyIgnoreCase(extras,"Departement")||"";
+    const valTexte2=getKeyIgnoreCase(extras,"Texte2")||"";
 
-      buildFilterLists(); 
-      map.setView([46.6,2.4],6);
+    const show=
+      filterState.region.get(valRegion)!==false &&
+      filterState.agence.get(valAgence)!==false &&
+      filterState.antenne.get(valAntenne)!==false &&
+      filterState.dsp.get(valDSP)!==false &&
+      filterState.canaldis.get(valCanalDIS)!==false &&
+      filterState.departement.get(valDepartement)!==false &&
+      filterState.texte2.get(valTexte2)!==false;
 
-      updateMapWithExtraProperties().finally(()=>{
-        document.getElementById('loadingOverlay').classList.add('hidden');
-      });
+    layer.setStyle({weight:weightVal});
+    if(show) layer.addTo(map); else map.removeLayer(layer);
+  });
+  syncFilters();
+}
 
-    } catch(err) {
-      console.error("Erreur Excel:",err);
-      document.getElementById('loadingOverlay').classList.add('hidden');
-    }
-  };
-  reader.readAsArrayBuffer(file);
+// ... reste du code build/updateDistinctValues, buildFilterLists, syncFilters inchangé
+
+document.getElementById('uploadExcel').addEventListener('change',(e)=>{
+  if(e.target.files.length>0){ document.getElementById('convertBtn').click(); }
 });
 
+document.getElementById('convertBtn').onclick=()=>{ 
+  const fileInput=document.getElementById('uploadExcel'); const file=fileInput.files[0];
+  if(!file) return;
+  const reader=new FileReader();
+  reader.onload=e=>{
+    const data=new Uint8Array(e.target.result);
+    const workbook=XLSX.read(data,{type:'array'});
+    const firstSheetName=workbook.SheetNames[0];
+    const sheet=workbook.Sheets[firstSheetName];
+    const jsonData=XLSX.utils.sheet_to_json(sheet);
+
+    extraProperties={}; updateDistinctValues(jsonData);
+    jsonData.forEach(item=>{ const cp=(item["Code Postal"]||"").toString(); if(cp.length>0) extraProperties[cp]=item; });
+    Object.keys(distinctValues).forEach(f=>distinctValues[f].forEach((_,val)=>filterState[f].set(val,true)));
+    buildFilterLists(); map.setView([46.6,2.4],6); updateMapWithExtraProperties();
+  };
+  reader.readAsArrayBuffer(file);
+};
+
+document.getElementById('contourCP').addEventListener('change',filterGeoLayer);
+
 function updateMapWithExtraProperties(){
-  return fetch('contours-codes-postaux.geojson')
-  .then(res=>res.json())
+  fetch('contours-codes-postaux.geojson')
+  .then(res=>{ if(!res.ok) throw new Error("Le fichier GeoJSON n'a pas été chargé correctement."); return res.json(); })
   .then(data=>{
     if(geoLayer) map.removeLayer(geoLayer);
     geoLayer=L.geoJSON(data,{
       style:function(feature){
         const cp=feature.properties.code_postal||feature.properties.codePostal||feature.properties.code||"";
         const extras=extraProperties[cp]||{};
-        return { fillColor:getKey(extras,"fondcouleur")||"#66cc66",
-                 color:getKey(extras,"lignecouleur")||"#000000",
-                 weight: contourVisible?1:0, opacity:1, fillOpacity:0.7 };
+        const contourChecked=document.getElementById('contourCP').checked;
+        return { fillColor:getKeyIgnoreCase(extras,"Fond_couleur")||"#66cc66", color:getKeyIgnoreCase(extras,"Ligne_couleur")||"#000000", weight:contourChecked?1:0, opacity:1, fillOpacity:0.7 };
       },
       onEachFeature:function(feature,layer){
         const cp=feature.properties.code_postal||feature.properties.codePostal||feature.properties.code||"";
         const extras=extraProperties[cp]||{};
-        let texteParts=[]; ["texte1","texte2","texte3","texte4"].forEach(fld=>{ const val=getKey(extras,fld); if(val) texteParts.push(val); });
+        let texteParts=[]; ["Texte1","Texte2","Texte3","Texte4"].forEach(fld=>{ const val=getKeyIgnoreCase(extras,fld); if(val) texteParts.push(val); });
         const tooltipText=texteParts.join(" ");
-        const policeCouleur=getKey(extras,"policecouleur")||'#000000';
+        const policeCouleur=getKeyIgnoreCase(extras,"police couleur")||'#000000';
         layer.bindTooltip(`<span style="color:${policeCouleur};">${tooltipText||("Code Postal : "+cp)}</span>`,{className:'custom-tooltip'});
-        const clicUrl=getKey(extras,"clicurl");
+        const clicUrl=getKeyIgnoreCase(extras,"Clic URL");
         if(clicUrl && clicUrl.trim().length>0){ layer.on("click",()=>window.open(clicUrl,'_blank')); layer.setStyle({ cursor:"pointer" }); }
       }
     }).addTo(map);
     filterGeoLayer();
-  })
-  .catch(err=>{
-    console.error("Erreur GeoJSON:",err);
-  });
+  }).catch(err=>{ console.error(err); map.setView([46.6,2.4],6); });
 }
 </script>
+</body>
+</html>
