--- a/map1.html
+++ b/map1.html
@@ -37,7 +37,6 @@
 <div id="sidebar-left">
   <div id="controls">
     <input type="file" id="uploadExcel" accept=".xlsx" />
-    <button id="convertBtn">Conversion JSON et Affichage</button>
   </div>
 
   <button class="toggle-btn" data-target="region">Région</button>
@@ -76,9 +75,9 @@
 <div id="sidebar-right">
   <button class="toggle-btn" data-target="departement">Département</button>
   <div id="filter-departement" class="hidden">
-    <label><input type="checkbox" id="contourCP" checked> Contour CP</label>
     <label class="selectall-label"><input type="checkbox" id="departement-select-all" checked> Tout Départements</label>
     <div id="departementList"></div>
+    <label><input type="checkbox" id="contourCP" checked> Contour CP</label>
   </div>
 
   <button class="toggle-btn" data-target="texte2">Nom département</button>
@@ -95,6 +94,12 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18,att
 let extraProperties={}, geoLayer;
 let distinctValues={region:new Map(), agence:new Map(), antenne:new Map(), dsp:new Map(), canaldis:new Map(), departement:new Map(), texte2:new Map()};
 let filterState={region:new Map(), agence:new Map(), antenne:new Map(), dsp:new Map(), canaldis:new Map(), departement:new Map(), texte2:new Map()};
+let contourEnabled = true; // par défaut activé
+
+document.getElementById("contourCP").addEventListener("change", e=>{
+  contourEnabled = e.target.checked;
+  updateMapWithExtraProperties();
+});
 
 function getKeyIgnoreCase(obj,key){ key=key.toLowerCase().replace(/\s+/g,''); for(const k in obj) if(k.toLowerCase().replace(/\s+/g,'')===key) return obj[k]; return null; }
 
@@ -102,17 +107,14 @@ function buildFilterList(filterName, containerId){
   const container=document.getElementById(containerId); container.innerHTML='';
   const mapVals=distinctValues[filterName];
   const items=Array.from(mapVals.keys());
-
   const enabled=[], disabled=[];
   items.forEach(val=>{
     if(!filterState[filterName].has(val)) filterState[filterName].set(val,true);
     const isEnabled=filterState[filterName].get(val)!==false;
     if(isEnabled) enabled.push(val); else disabled.push(val);
   });
-
   const sortedEnabled=enabled.sort((a,b)=>a.localeCompare(b,'fr',{sensitivity:'base'}));
   const sortedDisabled=disabled.sort((a,b)=>a.localeCompare(b,'fr',{sensitivity:'base'}));
-
   [...sortedEnabled,...sortedDisabled].forEach(val=>{
     const label=document.createElement('label');
     const checkbox=document.createElement('input'); checkbox.type='checkbox';
@@ -142,7 +144,7 @@ function setupSelectAllListener(filterName){
     const checked=selectAllCheckbox.checked;
     const container=document.getElementById(filterName+'List'); if(!container) return;
     Array.from(container.querySelectorAll('input[type="checkbox"]')).forEach(cb=>{
-      if(!cb.disabled){ 
+      if(!cb.disabled){
         cb.checked=checked; const val=cb.nextSibling.textContent.trim(); filterState[filterName].set(val,checked);
       }
     });
@@ -154,12 +156,12 @@ function setupFilterToggleButtons(){
   const buttons=document.querySelectorAll('.toggle-btn');
   buttons.forEach(btn=>{
     const targetId=btn.getAttribute('data-target');
-    btn.textContent=capitalizeFirstLetter(targetId);
+    btn.textContent=capitalizeFirstLetter(targetId==="texte2"?"Nom département":targetId);
     btn.addEventListener('click',()=>{
       const el=document.getElementById('filter-'+targetId);
       if(!el) return;
-      if(el.classList.contains('hidden')){ el.classList.remove('hidden'); btn.textContent='Masquer '+capitalizeFirstLetter(targetId); }
-      else{ el.classList.add('hidden'); btn.textContent=capitalizeFirstLetter(targetId); }
+      if(el.classList.contains('hidden')){ el.classList.remove('hidden'); btn.textContent='Masquer '+capitalizeFirstLetter(targetId==="texte2"?"Nom département":targetId); }
+      else{ el.classList.add('hidden'); btn.textContent=capitalizeFirstLetter(targetId==="texte2"?"Nom département":targetId); }
     });
   });
 }
@@ -170,9 +172,6 @@ document.getElementById('toggleRightBtn').addEventListener('click',()=>{ const r
 
 function filterGeoLayer(){
   if(!geoLayer) return;
-  const contourChecked=document.getElementById('contourCP').checked;
-  const weightVal=contourChecked?1:0;
-
   geoLayer.eachLayer(layer=>{
     const cp=layer.feature.properties.code_postal||layer.feature.properties.codePostal||layer.feature.properties.code||"";
     const extras=extraProperties[cp]||{};
@@ -183,7 +182,6 @@ function filterGeoLayer(){
     const valCanalDIS=getKeyIgnoreCase(extras,"Canal DIS")||"";
     const valDepartement=getKeyIgnoreCase(extras,"Departement")||"";
     const valTexte2=getKeyIgnoreCase(extras,"Texte2")||"";
-
     const show=
       filterState.region.get(valRegion)!==false &&
       filterState.agence.get(valAgence)!==false &&
@@ -192,22 +190,66 @@ function filterGeoLayer(){
       filterState.canaldis.get(valCanalDIS)!==false &&
       filterState.departement.get(valDepartement)!==false &&
       filterState.texte2.get(valTexte2)!==false;
-
-    layer.setStyle({weight:weightVal});
     if(show) layer.addTo(map); else map.removeLayer(layer);
   });
   syncFilters();
 }
 
-// ... reste du code build/updateDistinctValues, buildFilterLists, syncFilters inchangé
+function syncFilters(){
+  const hierarchy=['region','agence','antenne','dsp'];
+  hierarchy.forEach((filterName,index)=>{
+    const container=document.getElementById(filterName+'List'); if(!container) return;
+    Array.from(container.querySelectorAll('input[type="checkbox"]')).forEach(cb=>{
+      const val=cb.nextSibling.textContent.trim();
+      const cpSet=distinctValues[filterName].get(val)||new Set();
+      let anyVisible=false;
+      cpSet.forEach(cp=>{
+        const extras=extraProperties[cp]||{};
+        let ok=true;
+        for(let i=0;i<index;i++){
+          const parentFilter=hierarchy[i];
+          const parentVal=getKeyIgnoreCase(extras,parentFilter==='region'?'région':parentFilter==='agence'?'Agence':parentFilter==='antenne'?'Antenne':'DSP')||"";
+          if(filterState[parentFilter].get(parentVal)===false) ok=false;
+        }
+        if(ok) anyVisible=true;
+      });
+      cb.disabled=!anyVisible;
+    });
+    updateSelectAllCheckbox(filterName);
+  });
+  ['region','agence','antenne','dsp'].forEach(f=>buildFilterList(f,f+'List'));
+}
 
-document.getElementById('uploadExcel').addEventListener('change',(e)=>{
-  if(e.target.files.length>0){ document.getElementById('convertBtn').click(); }
-});
+function updateDistinctValues(jsonData){
+  Object.keys(distinctValues).forEach(k=>{ distinctValues[k].clear(); filterState[k].clear(); });
+  jsonData.forEach(item=>{
+    const cp=(item["Code Postal"]||"").toString(); if(!cp) return;
+    const ag=getKeyIgnoreCase(item,"Agence")||"";
+    const re=getKeyIgnoreCase(item,"région")||"";
+    const an=getKeyIgnoreCase(item,"Antenne")||"";
+    const dsp=getKeyIgnoreCase(item,"DSP")||"";
+    const canaldis=getKeyIgnoreCase(item,"Canal DIS")||"";
+    const dep=getKeyIgnoreCase(item,"Departement")||"";
+    const tx2=getKeyIgnoreCase(item,"Texte2")||"";
+    if(!distinctValues.agence.has(ag)) distinctValues.agence.set(ag,new Set()); distinctValues.agence.get(ag).add(cp);
+    if(!distinctValues.region.has(re)) distinctValues.region.set(re,new Set()); distinctValues.region.get(re).add(cp);
+    if(!distinctValues.antenne.has(an)) distinctValues.antenne.set(an,new Set()); distinctValues.antenne.get(an).add(cp);
+    if(!distinctValues.dsp.has(dsp)) distinctValues.dsp.set(dsp,new Set()); distinctValues.dsp.get(dsp).add(cp);
+    if(!distinctValues.canaldis.has(canaldis)) distinctValues.canaldis.set(canaldis,new Set()); distinctValues.canaldis.get(canaldis).add(cp);
+    if(!distinctValues.departement.has(dep)) distinctValues.departement.set(dep,new Set()); distinctValues.departement.get(dep).add(cp);
+    if(!distinctValues.texte2.has(tx2)) distinctValues.texte2.set(tx2,new Set()); distinctValues.texte2.get(tx2).add(cp);
+  });
+}
 
-document.getElementById('convertBtn').onclick=()=>{ 
+function buildFilterLists(){
+  ['region','agence','antenne','dsp','canaldis','departement','texte2'].forEach(f=>buildFilterList(f,f+'List'));
+  ['region','agence','antenne','dsp','canaldis','departement','texte2'].forEach(f=>{ updateSelectAllCheckbox(f); setupSelectAllListener(f); });
+  setupFilterToggleButtons();
+}
+
+document.getElementById('uploadExcel').addEventListener('change',()=>{
   const fileInput=document.getElementById('uploadExcel'); const file=fileInput.files[0];
-  if(!file) return;
+  if(!file){ return; }
   const reader=new FileReader();
   reader.onload=e=>{
     const data=new Uint8Array(e.target.result);
@@ -215,16 +257,13 @@ document.getElementById('convertBtn').onclick=()=>{
     const firstSheetName=workbook.SheetNames[0];
     const sheet=workbook.Sheets[firstSheetName];
     const jsonData=XLSX.utils.sheet_to_json(sheet);
-
     extraProperties={}; updateDistinctValues(jsonData);
     jsonData.forEach(item=>{ const cp=(item["Code Postal"]||"").toString(); if(cp.length>0) extraProperties[cp]=item; });
     Object.keys(distinctValues).forEach(f=>distinctValues[f].forEach((_,val)=>filterState[f].set(val,true)));
     buildFilterLists(); map.setView([46.6,2.4],6); updateMapWithExtraProperties();
   };
   reader.readAsArrayBuffer(file);
-};
-
-document.getElementById('contourCP').addEventListener('change',filterGeoLayer);
+});
 
 function updateMapWithExtraProperties(){
   fetch('contours-codes-postaux.geojson')
@@ -235,9 +274,11 @@ function updateMapWithExtraProperties(){
       style:function(feature){
         const cp=feature.properties.code_postal||feature.properties.codePostal||feature.properties.code||"";
         const extras=extraProperties[cp]||{};
-        const contourChecked=document.getElementById('contourCP').checked;
-        return { fillColor:getKeyIgnoreCase(extras,"Fond_couleur")||"#66cc66", color:getKeyIgnoreCase(extras,"Ligne_couleur")||"#000000", weight:contourChecked?1:0, opacity:1, fillOpacity:0.7 };
+        return { fillColor:getKeyIgnoreCase(extras,"Fond_couleur")||"#66cc66", color:getKeyIgnoreCase(extras,"Ligne_couleur")||"#000000", weight:contourEnabled?1:0, opacity:1, fillOpacity:0.7 };
       },
+     
+       
+
       onEachFeature:function(feature,layer){
         const cp=feature.properties.code_postal||feature.properties.codePostal||feature.properties.code||"";
         const extras=extraProperties[cp]||{};
@@ -255,3 +296,4 @@ function updateMapWithExtraProperties(){
 </script>
 </body>
 </html>
+
